src/test/error/class2.lns
class TestAcc {
   let val:int { non, pub }; // error
   let mut val2:int { non, pub };
}
{
   let test = new TestAcc( 1 );
   test.set_val( 1 ); // error
   print( test.$val );  // error
}
